--- a/projetoagoravai.css
+++ b/projetoagoravai.css
@@ -25,7 +25,7 @@ header{
 }
 
 header div.titulo{font-size: 40px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family:Arial, Helvetica, sans-serif;
     background-color:transparent;
     float: left;
     margin-top: 0%;
@@ -43,14 +43,14 @@ header div.titulo >h3{
     margin-bottom: 0%;
 }
 header div.menus{
-    border: 1px solid rgb(0, 0, 0);
+
     width:200px ;
     text-align: center;
 
 
     color: rgb(0, 0, 0);
     margin-top: auto;
-background-color: aquamarine;
+background-color: rgb(53, 236, 93);
     float: right;
     margin-bottom: auto;
     font-size: 40px;
@@ -70,16 +70,22 @@ header div:hover.menus{
 
 header div:hover.menus > p{
     text-align: left;
-    font-size: 15px;
+    font-size: 25px;
     border: 1px solid black;
+    
+    
+   
 
 
     margin-top: 0px;
     margin-bottom: 0px;
     display: block;
+    color: rgba(2, 2, 2, 0.63);
+
+
+}
+a{
     color: rgb(255, 255, 255);
-
-
 }
 
 
@@ -121,17 +127,7 @@ main div.texto{
  
 
 }
-main div.texto > p{
-    padding-left: 20px;
-   margin: auto;
-    margin-top: 0px;
-    background-color: transparent;
-    height: auto;
-    color: rgb(0, 0, 0);
 
-    text-align: justify;
-    margin-right:0ch;
-}
 
 
 
