--- a/projetoagoravai.css
+++ b/projetoagoravai.css
@@ -1,10 +1,11 @@
 @charset "utf-8";
 
 body{
+    clear:none;
     
 
     width: auto;
-    height:auto;
+    height:100vh;
     margin-left: 0px;
     margin-right: 0;
     background: linear-gradient(to right,
@@ -16,15 +17,18 @@ body{
 }
 header{
     margin-bottom: 0px;
+    
 
     width:auto;
     height: 50px;
     margin: 0px;
     background-color:transparent;
+
     
 }
 
 header div.titulo{font-size: 40px;
+    position: fixed;
     font-family:Arial, Helvetica, sans-serif;
     background-color:transparent;
     float: left;
@@ -43,6 +47,7 @@ header div.titulo >h3{
     margin-bottom: 0%;
 }
 header div.menus{
+    
 
     width:200px ;
     text-align: center;
@@ -86,6 +91,8 @@ header div:hover.menus{
 }
 :hover.menus > ul >li{
     text-align: left;
+    width: auto;
+    height: auto;
     font-size: 25px;
     border: 1px solid black;
     margin-top: 0px;
@@ -97,6 +104,8 @@ header div:hover.menus{
 .submenu>p{
     margin-top: 0%;
     margin-bottom: 0%;
+    width: auto;
+    
 }
 .submenu>ul{
     display:none ;
@@ -105,12 +114,19 @@ header div:hover.menus{
 :hover.submenu>ul{
     margin-left: 160px;
     display: inline-block;
+    width: 0px;
+    height: 0%;
+    position: fixed;
   
     list-style: none;
-    margin-top: auto;
+    margin-top: -15px;
     margin-bottom: 0%;
+    
+    width: 0em;
 }
+.submenu>ul>li{
 
+}
 
 
 
@@ -122,9 +138,9 @@ header div:hover.menus{
 
 
 main{
-
+    position:fixed;
     display: inline-block;
-    position: fixed;
+  
     z-index: -2;
     width: 1200px; 
     height: auto;
@@ -139,19 +155,8 @@ main  iframe.spotify {
 
 
 }
-main div.texto{
-    background-color: transparent;
-   
-    margin-left: -100px;
-    padding-left: -100px;
 
-    float: right;
-    height: auto;
 
-    width: 80%;
- 
-
-}
 
 
 
