--- a/projetoreal.css
+++ b/projetoreal.css
@@ -1,5 +1,7 @@
 @charset "utf-8";
 body{
+   
+   
 
     width: auto;
     height: 100vh;
@@ -8,21 +10,13 @@ body{
     rgb(189, 248, 208),rgb(124, 245, 162),rgb(92, 248, 141),rgb(38, 243, 103),rgba(0, 255, 81, 0.918)
       );
 }
-.main-container{
-    width: 85%;
-    margin-right: 0%;
-    margin:auto;
 
-    display: flex;
 
-    height: 100vh;
-}
-#spotify{
-    width: auto;
-}
+
 .container{
     background-color: transparent;
-    display: flex;
+    display: block;
+    width: 100%;
 
     
     height: 100vh;
@@ -30,10 +24,12 @@ border: 1px solid black;
     
 }
 header{
+    
     display: flex;
     flex-direction: row;
     background-color: transparent;
-    width: auto;
+    width:var(container);
+    margin-right: 0%;
     height: 50px;
     border: 1px solid rgb(241, 147, 147);
     
@@ -86,7 +82,7 @@ header{
 .col-ul ul{
     padding: 0%;
     list-style: none;
-    display: block;
+    display: none;
     
     margin:0ch 0px 0px 0px;
 
@@ -103,4 +99,24 @@ header{
 }
 :hover.sub-carta >ul{
     display: block;
+}
+
+.main-container{
+    background-color: transparent;
+    display:inline-flex;
+    height:100vh;
+    
+    
+    
+
+    
+
+border: 1px solid black;
+    
+
+}
+.teste{
+    background-color: aqua;
+    height: 10px;
+    width: 10px;
 }
