--- a/projetoreal.css
+++ b/projetoreal.css
@@ -3,7 +3,7 @@ body{
    
    
 
-    width: auto;
+    width: 100vw;
     height: 100vh;
     background: linear-gradient(to right,
     rgb(0, 255, 81, 0.918), rgb(38, 243, 103) ,rgb(92, 248, 141), rgb(124, 245, 162), rgb(189, 248, 208),
@@ -16,22 +16,23 @@ body{
 .container{
     background-color: transparent;
     display: block;
-    width: 100%;
+    width: 100vw;
 
     
     height: 100vh;
-border: 1px solid black;
+
     
 }
 header{
+    border-bottom: 1px solid black;
     
     display: flex;
     flex-direction: row;
     background-color: transparent;
     width:var(container);
     margin-right: 0%;
-    height: 50px;
-    border: 1px solid rgb(241, 147, 147);
+    height: 5vh;
+    
     
 }
 
@@ -40,7 +41,21 @@ header{
 
     text-align: center;
     width: auto;
-    height:var(header);
+    height:auto;
+
+
+
+}
+
+#col-titulo >p{
+    margin-top: 0%;
+    margin-bottom: 0%;
+    
+    width: auto;
+    height: auto;
+    font-size: 5vh;
+    text-align: justify;
+    font-family: Arial, Helvetica, sans-serif;
 
 
 
@@ -55,29 +70,20 @@ header{
 .col-ul{
     margin-right: 0px;
 
-    height:var(header);
-    width: auto;
+    height:5vh;
+
     background-color: blueviolet    ;
 }
-#col-titulo >p{
-    font-size: 25px;
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
 
 
-
-}
-.col-ul{align-items: right;
-
-}
 .col-ul>p{
-    height: 50px;
-    font-size: 30px;
+    height:5vh;
+    font-size: 5vh;
 
     margin-top: 0%;
     margin-bottom: 0%;
     text-align: center;
-    border: 1px solid black  ;
+
 }
 .col-ul ul{
     padding: 0%;
@@ -111,12 +117,17 @@ header{
 
     
 
-border: 1px solid black;
+
     
 
 }
 .teste{
     background-color: aqua;
-    height: 10px;
+    height: auto;
     width: 10px;
+}
+footer{
+    background-color: aqua;
+    width:auto;
+    height: 100px;
 }
