--- a/projetoreal.css
+++ b/projetoreal.css
@@ -1,5 +1,6 @@
 @charset "utf-8";
 body{
+margin: 0% 0px 0px 0px;
    
    
 
@@ -14,6 +15,8 @@ body{
 
 
 .container{
+    margin: 10px 10px 10px 10px;
+
     background-color: transparent;
     display: block;
     width: 98vw;
