--- a/projetoreal.css
+++ b/projetoreal.css
@@ -101,7 +101,7 @@ header{
 }
 .col-ul ul li{
     width: 15vh;
-    border: 0.2vh solid black;
+    border: 0.2vh solid rgb(0, 0, 0);
     font-size: 15px;
     text-align: center;
 }
@@ -135,7 +135,7 @@ border: 0.2vh solid black;
 }
 .teste2{
     z-index: -2;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(233, 130, 130);
     width: 50vw;
 }
 .teste3{
