--- a/projetoreal.css
+++ b/projetoreal.css
@@ -22,7 +22,7 @@ margin: 0% 0px 0px 0px;
     width: 98vw;
 
     
-    height: 100vh;
+    height: 90vh0;
 
     
 }
@@ -102,7 +102,7 @@ header{
 .col-ul ul li{
     width: 15vh;
     border: 0.2vh solid rgb(0, 0, 0);
-    font-size: 15px;
+    font-size: 3vh;
     text-align: center;
 }
 .sub-carta>ul{
