--- a/projetoreal.css
+++ b/projetoreal.css
@@ -31,7 +31,7 @@ header{
     display: flex;
     flex-direction: row;
   
-    width:auto;
+    width:100vw;
     margin-right: 0%;
     height: 5vh;
     
@@ -122,7 +122,7 @@ header{
 
 }
 :hover.sub-carta >ul{
-    display: block;
+    display:inline-flex ;
 }
 
 .main-container{
