--- a/sitedomeuamor.css
+++ b/sitedomeuamor.css
@@ -1,12 +1,11 @@
 @charset "utf-8";
-
 body{
-margin: 0% 0px 0px 0px;
+    margin: 0% 0px 0px 0px;
    
    
 
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background: linear-gradient(to right,
     rgb(0, 255, 81, 0.918), rgb(38, 243, 103) ,rgb(92, 248, 141), rgb(124, 245, 162), rgb(189, 248, 208),
     rgb(189, 248, 208),rgb(124, 245, 162),rgb(92, 248, 141),rgb(38, 243, 103),rgba(0, 255, 81, 0.918)
@@ -14,32 +13,18 @@ margin: 0% 0px 0px 0px;
 }
 
 
-
-.container{
-    margin: 10px 10px 10px 10px;
-
-    background-color: transparent;
-    display: block;
-    width: 98vw;
-
-    
-    height: 90vh;
-
-    
-}
 header{
     
     display: flex;
     flex-direction: row;
+    background-color: aquamarine;
   
-    width:auto;
+    width:100%    ;
     margin-right: 0%;
-    height: 5vh;
+    height: 0%;
     
     
 }
-
-
 #col-titulo{
 
     text-align: center;
@@ -108,7 +93,7 @@ header{
 .col-ul ul li{ /* lista dentro dos menu*/
     width: 10vw;
     border: 0.2vh solid rgb(0, 0, 0);
-    font-size: 3vh;
+    font-size: 15px;
     text-align: center;
     
 }
@@ -125,26 +110,7 @@ header{
 :hover.sub-carta >ul{
     display:inline-flex ;
 }
-
-.main-container{
-    background-color: transparent;
-    display: flex;
-    height:100vh;
-    
-    
-    
-
-    
-
-border: 0.2vh solid black;
-    
-
-}
-footer{
-    background-color: aqua;
-    width:auto;
-    height: 5vh;
-}
 #spotify{
+    display: flex;
     width: 20vw;
 }
