--- a/projetoreal.css
+++ b/projetoreal.css
@@ -1,10 +1,7 @@
 @charset "utf-8";
 
 body{
-margin: 0% 0px 0px 0px;
-   
-   
-
+    margin: 0% 0px 0px 0px;
     width: 100%;
     height: 100%;
     background: linear-gradient(to right,
@@ -12,133 +9,84 @@ margin: 0% 0px 0px 0px;
     rgb(189, 248, 208),rgb(124, 245, 162),rgb(92, 248, 141),rgb(38, 243, 103),rgba(0, 255, 81, 0.918)
       );
 }
-
-
-
 .container{
     margin: 10px 10px 10px 10px;
-
     background-color: transparent;
     display: block;
-    width: 98vw;
-
-    
-    height: 90vh;
-
-    
+    width: 90vw;  
+    height: 90vh; 
 }
 header{
-    
     display: flex;
     flex-direction: row;
-  
     width:auto;
     margin-right: 0%;
     height: 5vh;
-    
-    
 }
-
-
 #col-titulo{
-
     text-align: center;
     width: auto;
     height:auto;
-
-
-
 }
-
 #col-titulo >p{
     margin-top: 0%;
     margin-bottom: 0%;
-    
     width: 30vw;
     height: 30vh;
     font-size: 5vh;
     text-align: justify;
     font-family: Arial, Helvetica, sans-serif;
-
-
-
 }
-
 .emp-spc{
     margin-inline-start: auto;
     background-color: aliceblue;
-
 }
-
 .col-ul{ /* menu principal*/
-
+    display: flex;
     height:auto;
     width: 10vw;
-    
-
-      
 }
-
-
 .col-ul>p{ /* texto do menu principal*/
     height:auto;
     font-size: 4vh;
     width: auto;
-
     margin-top: 0%;
     margin-bottom: 0%;
     text-align: center;
     border: 0.2vh solid rgb(255, 255, 255)  ;
 }
 .col-ul>ul{/* lista dentro do submenu*/
-    
- 
     padding: 0%;
     list-style: none;
-    display: none;
-    
+    display: none;  
     margin:0ch 0px 0px 0px;
-
 }
 :hover.col-ul>ul{
-    display: block;
-    width: 0vw;
-    
+    display: inline-flex;
+    width: 10vw;
+    height: 10vh;  
 }
 .col-ul ul li{ /* lista dentro dos menu*/
     width: 10vw;
     border: 0.2vh solid rgb(0, 0, 0);
     font-size: 3vh;
     text-align: center;
-    
+    background-color: aliceblue;
 }
 .sub-carta>ul{ /* lista dentro submenu carta*/
-    
     padding: 0%;
     list-style: none;
-    display: none;
-    
+    display: none; 
     margin:0ch 0px 0px 0px;
-
-
 }
-:hover.sub-carta >ul{
-    display:inline-flex ;
+:hover li.sub-carta >ul{
+    display:inline-flex;
 }
-
 .main-container{
     background-color: transparent;
     display: flex;
     height:100vh;
-    
-    
-    
-
-    
-
-border: 0.2vh solid black;
-    
-
+    border: 0.2vh solid black;
 }
 footer{
     background-color: aqua;
@@ -146,5 +94,5 @@ footer{
     height: 5vh;
 }
 #spotify{
-    width: 20vw;
+    width: 20%;
 }
