--- a/sitedomeuamor.css
+++ b/sitedomeuamor.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 body{
     margin: 0% 0px 0px 0px;
-   
+   display: flex;
    
 
     width: 100vw;
@@ -11,106 +11,54 @@ body{
     rgb(189, 248, 208),rgb(124, 245, 162),rgb(92, 248, 141),rgb(38, 243, 103),rgba(0, 255, 81, 0.918)
       );
 }
-
-
 header{
-    
+    height: 10%;
+    width: 100vw;
     display: flex;
-    flex-direction: row;
-    background-color: aquamarine;
-  
-    width:100%    ;
-    margin-right: 0%;
-    height: 0%;
-    
-    
+    background-color: antiquewhite;
 }
-#col-titulo{
-
-    text-align: center;
-    width: auto;
-    height:auto;
-
-
-
-}
-
-#col-titulo >p{
-    margin-top: 0%;
-    margin-bottom: 0%;
-    
-    width: 30vw;
-    height: 30vh;
-    font-size: 5vh;
-    text-align: justify;
-    font-family: Arial, Helvetica, sans-serif;
-
-
-
-}
-
-.emp-spc{
-    margin-inline-start: auto;
-    background-color: aliceblue;
-
-}
-
-.col-ul{ /* menu principal*/
-
-    height:auto;
-    width: 10vw;
-    
-
-      
-}
-
-
-.col-ul>p{ /* texto do menu principal*/
-    height:auto;
-    font-size: 4vh;
-    width: auto;
-
-    margin-top: 0%;
-    margin-bottom: 0%;
-    text-align: center;
-    border: 0.2vh solid rgb(255, 255, 255)  ;
-}
-.col-ul>ul{/* lista dentro do submenu*/
-    
+#col-titulo  {
  
-    padding: 0%;
-    list-style: none;
-    display: none;
-    
-    margin:0ch 0px 0px 0px;
-
+    font-size: 15%;
+    background-color: bisque;
+    margin: 0%;
+    height:100%;
 }
-:hover.col-ul>ul{
+#col-titulo>p{
     display: block;
-    width: 0vw;
-    
+    border: 1px solid black;
+    font-size: 2vw;
+    height: 100%;
+    background-color: rgb(106, 76, 216);
+    margin: 0%;
 }
-.col-ul ul li{ /* lista dentro dos menu*/
-    width: 10vw;
-    border: 0.2vh solid rgb(0, 0, 0);
-    font-size: 15px;
-    text-align: center;
-    
-}
-.sub-carta>ul{ /* lista dentro submenu carta*/
-    
-    padding: 0%;
-    list-style: none;
-    display: none;
-    
-    margin:0ch 0px 0px 0px;
 
 
+#emp-spc{
+    margin-inline-start: auto;
+    
 }
-:hover.sub-carta >ul{
-    display:inline-flex ;
+
+.col-ul p, .sub-carta p{
+    border: 1px solid  black;
+    font-size: 2vw;
+    height: 100%;
+    background-color: rgb(106, 76, 216);
+    margin: 0%;
 }
-#spotify{
+.col-ul ul, .sub-carta ul{
+background-color: antiquewhite;
+margin: 0%;
+} 
+main{
     display: flex;
+    justify-content: left;
+}
+
+
+
+
+#spotify{
+
     width: 20vw;
 }
