--- a/agoravai/sitedomeuamor.css
+++ b/agoravai/sitedomeuamor.css
@@ -12,31 +12,40 @@ body{
       );
 }
 header{
-    height: 10%;
+    height: 6vh;
     width: 100vw;
     display: flex;
     background-color: antiquewhite;
 }
-#col-titulo  {
- 
-    font-size: 15%;
-    background-color: bisque;
-    margin: 0%;
-    height:100%;
-}
-#col-titulo>p{
+#col-titulo {
     display: block;
+    position:relative;
+    
     border: 1px solid black;
-    font-size: 2vw;
-    height: 100%;
-    background-color: rgb(106, 76, 216);
-    margin: 0%;
+    background-color: bisque;
+    height:100%;
+    width: 100%;
 }
+#col-titulo >p{
+    white-space: nowrap;
+    display: block;
+    font-size:initial; 
+    width:100%;
+    height: 100%;
+    background-color: blue;
+    margin: 0%;
+    
+}
+
 
 
 #emp-spc{
     margin-inline-start: auto;
     
+}
+.col-ul, .sub-carta{
+width: fit-content;
+height: 100%;
 }
 
 .col-ul p, .sub-carta p{
@@ -45,11 +54,25 @@ header{
     height: 100%;
     background-color: rgb(106, 76, 216);
     margin: 0%;
+    width: 100%;
 }
 .col-ul ul, .sub-carta ul{
-background-color: antiquewhite;
-margin: 0%;
-} 
+    height: fit-content;
+    width: 100%;
+    background-color: antiquewhite;
+    margin: 0%;
+    padding: 0%;
+    list-style: none;
+}
+.col-ul ul>li, .sub-carta ul>a {
+    width: 100%;
+    font-size: 25px;
+
+
+}
+
+
+
 main{
     display: flex;
     justify-content: left;
@@ -59,6 +82,6 @@ main{
 
 
 #spotify{
-
+display: none;
     width: 20vw;
 }
