--- a/agoravai/sitedomeuamor.css
+++ b/agoravai/sitedomeuamor.css
@@ -13,7 +13,7 @@ body{
 }
 header{
     height: 6vh;
-    width: 100vw;
+    width: 99.9vw;
     display: flex;
     background-color: antiquewhite;
 }
@@ -26,11 +26,11 @@ header{
     height:100%;
     width: 100%;
 }
-#col-titulo >p{
-    white-space: nowrap;
+#col-titulo p{
+
     display: block;
-    font-size:initial; 
-    width:100%;
+    font-size:5vh; 
+    width:fit-content;
     height: 100%;
     background-color: blue;
     margin: 0%;
@@ -44,11 +44,14 @@ header{
     
 }
 .col-ul, .sub-carta{
-width: fit-content;
+
+
+width: 30%;
 height: 100%;
 }
 
 .col-ul p, .sub-carta p{
+ 
     border: 1px solid  black;
     font-size: 2vw;
     height: 100%;
@@ -57,6 +60,7 @@ height: 100%;
     width: 100%;
 }
 .col-ul ul, .sub-carta ul{
+   
     height: fit-content;
     width: 100%;
     background-color: antiquewhite;
@@ -66,8 +70,23 @@ height: 100%;
 }
 .col-ul ul>li, .sub-carta ul>a {
     width: 100%;
+    display: none;
     font-size: 25px;
+}
 
+:hover.col-ul ul li {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    
+}
+:hover.sub-carta ul a  {
+    display:block;
+    
+    
+    height: 100%;
+    width: 100%;
+    font-size: 3vh;
 
 }
 
